# Karere

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  io.github.tobagin.Karere.yml  karere-dev  meson.build  meson_options.txt  npm-sources-clean.json
.github/workflows/: ci.yml  update-backend-version.yml
backend/: ENHANCED_DATABASE_README.md  PROGRESSIVE_HISTORY_PLAN.md  backend-wwebjs.js  backend.js  database.js  download-all-contact-data.js  generated-sources.json  logger.js  package-lock.json  package.json
backend/data/: karere.db-shm  karere.db-wal
backend/tests/: setup.js
backend/tests/integration/: backend-integration.test.js
backend/tests/unit/: database.test.js  logger.test.js  service-manager.test.js
docs/: API.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md
frontend/: karere.in  meson.build
frontend/data/: io.github.tobagin.Karere.Devel.Simple.json  io.github.tobagin.Karere.Devel.desktop.in  io.github.tobagin.Karere.Devel.json  io.github.tobagin.Karere.appdata.xml.in  io.github.tobagin.Karere.desktop.in  io.github.tobagin.Karere.gschema.xml  io.github.tobagin.Karere.json  karere-devel.gresource.xml  karere.gresource.xml  karere.ui  style.css
frontend/data/ui/: chat_row.blp  chat_row.ui  window.blp  window.ui
frontend/data/ui/dialogs/: about.ui  settings.blp  settings.ui
frontend/data/ui/menus/: add_attachment_menu.ui  chat_page_menu.ui  chat_row_menu.blp  chat_row_menu.ui  main_menu.blp  main_menu.ui
frontend/data/ui/pages/: chat_list_page.blp  chat_page.blp  chat_page.ui  download_progress_page.blp  loading_page.ui  qr_page.blp  qr_page.ui  reconnecting_page.blp  reconnecting_page.ui  sync_progress_page.blp  welcome_page.ui
frontend/karere/: chat_list_page.py  chat_page.py  chat_row.py  main.py  websocket_client.py  window.py
scripts/: build-packages.sh  release.sh  run-dev.sh  run-tests.sh
src/data/: io.github.tobagin.Karere.Devel.appdata.xml.in  io.github.tobagin.Karere.json
src/data/po/: LINGUAS  meson.build
src/data/ui/dialogs/: about.blp
src/data/ui/menus/: add_attachment_menu.blp  chat_page_menu.blp
src/data/ui/pages/: chat_page.blp  download_progress_page.blp  loading_page.blp  qr_page.blp  welcome_page.blp
src/karere/: chat_row.py  main.py  settings_dialog.py  websocket_client.py  window.py
test-reports/: test-summary.txt
tests/frontend/: test_websocket_client.py  test_window.py
tests/integration/: test_full_integration.py
